[gd_scene load_steps=9 format=3 uid="uid://cgxkji0salglt"]

[ext_resource type="Script" path="res://Menu/Title_Screen/Title_Screen.gd" id="1_7rbrw"]
[ext_resource type="FontFile" uid="uid://bt3ibxabl67vp" path="res://Fonts/determination-extended.ttf" id="1_sabbf"]
[ext_resource type="Theme" uid="uid://bpufx3nqujwwh" path="res://Themes/Button/Title_Screen.tres" id="2_2uw7o"]
[ext_resource type="Theme" uid="uid://bmqswjcl61tr8" path="res://Themes/Button/Title_Screen_E.tres" id="2_fjlsy"]
[ext_resource type="Theme" uid="uid://c0auhrwrxs4ra" path="res://Themes/Button/Title_Screen_2.tres" id="2_kg2u7"]

[sub_resource type="Animation" id="Animation_rt5v1"]
resource_name = "Title_D_Effect_Off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title_Effect_Node2D/D_Effect_RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fgvwd"]
resource_name = "Title_D_Effect_On"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title_Effect_Node2D/D_Effect_RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title_Effect_Node2D/D_Effect_RichTextLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-320, 160), Vector2(32, 160), Vector2(120, 160), Vector2(120, 160), Vector2(-320, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1y6qv"]
_data = {
"Title_D_Effect_Off": SubResource("Animation_rt5v1"),
"Title_D_Effect_On": SubResource("Animation_fgvwd")
}

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_7rbrw")

[node name="Background_ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title_HBox" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -519.0
offset_top = 67.0
offset_right = 519.0
offset_bottom = 176.0
grow_horizontal = 2
theme = ExtResource("2_fjlsy")
theme_override_constants/separation = 60

[node name="Donjon_HBox" type="HBoxContainer" parent="Title_HBox"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_2uw7o")

[node name="D_Button" type="Button" parent="Title_HBox/Donjon_HBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "D
"

[node name="O_Button" type="Button" parent="Title_HBox/Donjon_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "O"

[node name="N_Button" type="Button" parent="Title_HBox/Donjon_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "N"

[node name="J_Button" type="Button" parent="Title_HBox/Donjon_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "J"

[node name="O_Button2" type="Button" parent="Title_HBox/Donjon_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "O
"

[node name="N_Button2" type="Button" parent="Title_HBox/Donjon_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "N
"

[node name="Not_HBox" type="HBoxContainer" parent="Title_HBox"]
layout_mode = 2

[node name="N_Button" type="Button" parent="Title_HBox/Not_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "N
"

[node name="O_Button" type="Button" parent="Title_HBox/Not_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "O"

[node name="T_Button" type="Button" parent="Title_HBox/Not_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "T"

[node name="Finale_HBox" type="HBoxContainer" parent="Title_HBox"]
layout_mode = 2

[node name="F_Button" type="Button" parent="Title_HBox/Finale_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "F
"

[node name="I_Button" type="Button" parent="Title_HBox/Finale_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "I"

[node name="N_Button" type="Button" parent="Title_HBox/Finale_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "N"

[node name="A_Button" type="Button" parent="Title_HBox/Finale_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "A"

[node name="L_Button" type="Button" parent="Title_HBox/Finale_HBox"]
layout_mode = 2
theme = ExtResource("2_fjlsy")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "L
"

[node name="E_Button" type="Button" parent="Title_HBox/Finale_HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 100
text = "E
"

[node name="Standard_Button_VBox" type="Node2D" parent="."]

[node name="New_Game_Button" type="Button" parent="Standard_Button_VBox"]
offset_left = 544.0
offset_top = 448.0
offset_right = 847.0
offset_bottom = 503.0
theme = ExtResource("2_kg2u7")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 50
text = "NOUVEAU JEU"
alignment = 0

[node name="Continue_Button" type="Button" parent="Standard_Button_VBox"]
offset_left = 544.0
offset_top = 512.0
offset_right = 805.0
offset_bottom = 567.0
theme = ExtResource("2_kg2u7")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 50
text = "CONTINUER"
alignment = 0

[node name="Settings_Button" type="Button" parent="Standard_Button_VBox"]
offset_left = 544.0
offset_top = 576.0
offset_right = 747.0
offset_bottom = 631.0
theme = ExtResource("2_kg2u7")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"
alignment = 0

[node name="Quit_Button" type="Button" parent="Standard_Button_VBox"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 544.0
offset_top = 640.0
offset_right = 747.0
offset_bottom = 695.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_kg2u7")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 50
text = "QUITTER"
alignment = 0

[node name="Confirmation_Menu_Node" type="Node2D" parent="."]
visible = false

[node name="Blurry_ColorRect" type="ColorRect" parent="Confirmation_Menu_Node"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.67451)

[node name="Confirmation_RichTextLabel" type="RichTextLabel" parent="Confirmation_Menu_Node"]
offset_left = 288.0
offset_top = 200.0
offset_right = 1032.0
offset_bottom = 272.0
theme_override_fonts/normal_font = ExtResource("1_sabbf")
theme_override_font_sizes/normal_font_size = 30
text = "Etes-vous certain de vouloir quitter le jeu ? 
"

[node name="Confirmation_Yes_Button" type="Button" parent="Confirmation_Menu_Node"]
offset_left = 496.0
offset_top = 336.0
offset_right = 555.0
offset_bottom = 377.0
theme = ExtResource("2_kg2u7")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 30
text = "OUI"

[node name="Confirmation_No_Button" type="Button" parent="Confirmation_Menu_Node"]
offset_left = 728.0
offset_top = 336.0
offset_right = 787.0
offset_bottom = 377.0
theme = ExtResource("2_kg2u7")
theme_override_fonts/font = ExtResource("1_sabbf")
theme_override_font_sizes/font_size = 30
text = "NON
"

[node name="Title_Effect_Node2D" type="Node2D" parent="."]

[node name="D_Effect_RichTextLabel" type="RichTextLabel" parent="Title_Effect_Node2D"]
offset_left = -320.0
offset_top = 160.0
offset_bottom = 208.0
theme_override_fonts/normal_font = ExtResource("1_sabbf")
bbcode_enabled = true
text = "Un jeu de Deklou
Bas√© sur Donjon Finale de Kraby Games"

[node name="Version_Node2D" type="Node2D" parent="."]

[node name="Version_RichTextLabel" type="RichTextLabel" parent="Version_Node2D"]
offset_left = 1192.0
offset_top = 696.0
offset_right = 1264.0
offset_bottom = 720.0
theme_override_fonts/normal_font = ExtResource("1_sabbf")
text = "1.0"
autowrap_mode = 0
text_direction = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1y6qv")
}

[connection signal="pressed" from="Title_HBox/Donjon_HBox/D_Button" to="." method="_on_d_button_pressed"]
[connection signal="pressed" from="Title_HBox/Donjon_HBox/O_Button" to="." method="_on_o_button_pressed"]
[connection signal="pressed" from="Title_HBox/Finale_HBox/E_Button" to="." method="_on_e_button_pressed"]
[connection signal="mouse_entered" from="Standard_Button_VBox/New_Game_Button" to="." method="_on_new_game_button_mouse_entered"]
[connection signal="mouse_exited" from="Standard_Button_VBox/New_Game_Button" to="." method="_on_new_game_button_mouse_exited"]
[connection signal="mouse_entered" from="Standard_Button_VBox/Continue_Button" to="." method="_on_continue_button_mouse_entered"]
[connection signal="mouse_exited" from="Standard_Button_VBox/Continue_Button" to="." method="_on_continue_button_mouse_exited"]
[connection signal="mouse_entered" from="Standard_Button_VBox/Settings_Button" to="." method="_on_settings_button_mouse_entered"]
[connection signal="mouse_exited" from="Standard_Button_VBox/Settings_Button" to="." method="_on_settings_button_mouse_exited"]
[connection signal="mouse_entered" from="Standard_Button_VBox/Quit_Button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="Standard_Button_VBox/Quit_Button" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="Standard_Button_VBox/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Confirmation_Menu_Node/Confirmation_Yes_Button" to="." method="_on_confirmation_yes_button_pressed"]
[connection signal="pressed" from="Confirmation_Menu_Node/Confirmation_No_Button" to="." method="_on_confirmation_no_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
